src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__datum__is_true.snap
---
source: src/expr/src/scalar/func/impls/datum.rs
expression: "#[sqlfunc(sqlname = \"istrue\")]\nfn is_true<'a>(a: Datum<'a>) -> bool {\n    a == Datum::True\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct IsTrue;
impl crate::func::EagerUnaryFunc for IsTrue {
    type Input<'a> = Datum<'a>;
    type Output<'a> = bool;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        is_true(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for IsTrue {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("istrue")
    }
}
fn is_true<'a>(a: Datum<'a>) -> bool {
    a == Datum::True
}
