src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__datum__mz_row_size.snap
---
source: src/expr/src/scalar/func/impls/datum.rs
expression: "#[sqlfunc()]\nfn mz_row_size<'a>(a: DatumList<'a>) -> Result<i32, EvalError> {\n    let sz = mz_repr::row_size(a.iter());\n    i32::try_from(sz).or_else(|_| Err(EvalError::Int32OutOfRange(sz.to_string().into())))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct MzRowSize;
impl crate::func::EagerUnaryFunc for MzRowSize {
    type Input<'a> = DatumList<'a>;
    type Output<'a> = Result<i32, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        mz_row_size(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for MzRowSize {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(mz_row_size))
    }
}
fn mz_row_size<'a>(a: DatumList<'a>) -> Result<i32, EvalError> {
    let sz = mz_repr::row_size(a.iter());
    i32::try_from(sz).or_else(|_| Err(EvalError::Int32OutOfRange(sz.to_string().into())))
}
